--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,61 @@
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
 body {
-  background-color: rgb(82, 4, 92);
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #333;
+  background-color: #fff;
+}
+
+ul {
+  list-style: none;
+}
+
+.flex {
+  display: flex;
+}
+
+.main-center {
+  justify-content: center;
+}
+
+.cross-center {
+  align-items: center;
+}
+
+.main-space-between {
+  justify-content: space-between;
+}
+
+.main-space-around {
+  justify-content: space-around;
+}
+
+.nav {
+  width: 15%;
+}
+
+.nav a {
+  text-decoration: none;
+  color: #333;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 10px;
+  display: block;
+  border-bottom: 1px solid #ddd;
+}
+
+.nav a:hover {
+  background-color: #ddd;
+}
+
+.nav a:active {
+  background-color: #ddd;
 }
