--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,20 @@ h2 {
   font-size: 4rem;
 }
 
+dl {
+  font-size: 1.6rem;
+}
+
+dt {
+  font-weight: bold;
+  font-size: 1.7rem;
+  margin-left: 20px;
+}
+
+.d-none {
+  display: none;
+}
+
 .text-center {
   text-align: center;
 }
@@ -90,24 +104,30 @@ h2 {
   height: 100%;
   top: 0;
   position: fixed;
+  -webkit-backdrop-filter: blur(5px);
+  -moz-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
-  --webkit-backdrop-filter: blur(5px);
-  --moz-backdrop-filter: blur(5px);
 }
 
 .card {
   position: absolute;
   width: 80%;
-  margin: 7% auto;
+  margin: 0 auto;
+  top: 50%;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0px 0px 5px #ddd;
   padding: 20px;
   max-width: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) translateY(-50%);
   box-shadow: 0px 0px 40px 5px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
+  overflow: auto;
+}
+
+.card-image img {
+  max-height: 100px;
 }
 
 .close {
@@ -135,8 +155,10 @@ h2 {
 }
 
 .movie-container {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: repeat(3, 1fr);
   column-gap: 1rem;
 }
 
@@ -167,8 +189,10 @@ h2 {
 
 @media (min-width: 768px) {
   .movie-container {
+    display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    -ms-grid-columns: repeat(3, 1fr);
     column-gap: 2rem;
   }
 }
