--- a/src/style.css
+++ b/src/style.css
@@ -73,7 +73,7 @@ dt {
 }
 
 .logo-image {
-  background: url("./logo.png");
+  /* background: url("./logo.png"); */
 }
 
 .nav {
@@ -115,13 +115,11 @@ dt {
   margin: 0 auto;
   top: 50%;
   background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0px 0px 5px #ddd;
   padding: 20px;
   max-width: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  box-shadow: 0px 0px 40px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 40px 5px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   overflow: auto;
 }
