--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,24 @@ h2 {
   font-size: 4rem;
 }
 
+dl {
+  font-size: 1.6rem;
+}
+
+dt {
+  font-weight: bold;
+  font-size: 1.7rem;
+  margin-left: 20px;
+}
+
+.d-none {
+  display: none;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .flex {
   display: flex;
 }
@@ -52,6 +70,10 @@ h2 {
 
 .main-space-around {
   justify-content: space-around;
+}
+
+.logo-image {
+  background: url("./assets/logo.png");
 }
 
 .nav {
@@ -76,6 +98,46 @@ h2 {
   background-color: #ddd;
 }
 
+.card-wrapper {
+  background: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  position: fixed;
+  -webkit-backdrop-filter: blur(5px);
+  -moz-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+}
+
+.card {
+  position: absolute;
+  width: 80%;
+  margin: 0 auto;
+  top: 50%;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px #ddd;
+  padding: 20px;
+  max-width: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  box-shadow: 0px 0px 40px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  overflow: auto;
+}
+
+.card-image img {
+  max-height: 100px;
+}
+
+.close {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  font-size: 30px;
+  cursor: pointer;
+}
+
 .button {
   padding: 0.9rem 3rem;
   border-bottom: 4px solid black;
@@ -93,8 +155,10 @@ h2 {
 }
 
 .movie-container {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: repeat(3, 1fr);
   column-gap: 1rem;
 }
 
@@ -127,23 +191,12 @@ h2 {
   cursor: pointer;
 }
 
-.logo {
-  background-image: url("../src/assets/logo.png");
-  width: 10rem;
-  height: 10rem;
-  background-size: cover;
-  margin-right: 2rem;
-}
-
-.header {
-  border-bottom: 2px solid black;
-  padding: 2rem 0;
-}
-
 @media (min-width: 768px) {
   .movie-container {
+    display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    -ms-grid-columns: repeat(3, 1fr);
     column-gap: 2rem;
   }
 }
