Add movies counter

--- a/src/style.css
+++ b/src/style.css
@@ -28,9 +28,9 @@ ul {
   list-style: none;
 }
 
-h2 {
+.title {
   text-align: center;
-  font-family: "New MOTOR", sans-serif;
+  font-family: "COCOGOOSE", sans-serif;
   font-size: 4rem;
 }
 
