--- a/src/style.css
+++ b/src/style.css
@@ -72,8 +72,24 @@ dt {
   justify-content: space-around;
 }
 
-.logo-image {
-  background: url("./assets/logo.jpg");
+.logo {
+  background-image: url("./assets/logo.jpg");
+  background-size: cover;
+  width: 6rem;
+  height: 6rem;
+  margin-right: 2rem;
+}
+
+.header {
+  background-color: #333;
+  color: #ddd;
+  padding: 1rem 0;
+}
+
+.footer {
+  background-color: #333;
+  color: #ddd;
+  padding: 1rem 0;
 }
 
 .nav {
@@ -82,7 +98,7 @@ dt {
 
 .nav a {
   text-decoration: none;
-  color: #333;
+  color: #ddd;
   font-size: 16px;
   font-weight: bold;
   padding: 10px;
@@ -91,7 +107,7 @@ dt {
 }
 
 .nav a:hover {
-  background-color: #ddd;
+  background-color: rgb(122, 168, 179);
 }
 
 .nav a:active {
