--- a/src/style.css
+++ b/src/style.css
@@ -44,6 +44,10 @@ dt {
   margin-left: 20px;
 }
 
+.mr-1 {
+  margin-right: 1rem;
+}
+
 .d-none {
   display: none;
 }
@@ -187,6 +191,33 @@ dt {
 
 .like-icon:hover {
   cursor: pointer;
+}
+
+.comment-input input {
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+  flex: 10 ;
+}
+
+.comment-input button {
+  padding: 0.5rem;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+  flex: 1;
+  height: 100%;
+}
+
+.comment-actions button {
+  padding: 0.5rem;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+  height: 100%;
+  width: 100%;
 }
 
 @media (min-width: 768px) {
