--- a/src/style.css
+++ b/src/style.css
@@ -81,9 +81,12 @@ dt {
 }
 
 .header {
+  display: flex;
+  flex-direction: column;
   background-color: #333;
   color: #ddd;
   padding: 1rem 0;
+  width: 100%;
 }
 
 .footer {
@@ -93,7 +96,8 @@ dt {
 }
 
 .nav {
-  width: 15%;
+  /* width: 15%; */
+  padding: 0;
 }
 
 .nav a {
@@ -125,6 +129,12 @@ dt {
   backdrop-filter: blur(5px);
 }
 
+.card-title,
+h3,
+.summary p {
+  color: #ddd;
+}
+
 .card {
   position: absolute;
   width: 80%;
@@ -139,10 +149,31 @@ dt {
   border-radius: 10px;
   overflow-y: auto;
   height: 80%;
+  background-image: url("./assets/background.jpg");
+  background-size: cover;
 }
 
 .card-image img {
-  max-height: 100px;
+  max-height: 500px;
+  border-radius: 1rem;
+}
+
+.description {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  color: #ddd;
+}
+
+.description li {
+  display: flex;
+  align-items: center;
+  height: 3rem;
+}
+
+.description li p {
+  width: 11rem;
+  font-weight: bold;
 }
 
 .close {
@@ -176,11 +207,10 @@ dt {
 }
 
 .movie-container {
-  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  -ms-grid-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   column-gap: 1rem;
+  padding: 0;
 }
 
 .div-container {
@@ -239,6 +269,10 @@ dt {
   width: 100%;
 }
 
+.comments-list li {
+  color: #ddd;
+}
+
 .about-section {
   flex-direction: column;
   height: 80vh;
@@ -246,7 +280,7 @@ dt {
 
 .about-section p {
   text-align: justify;
-  width: 50rem;
+  width: 30rem;
 }
 
 .btn-send {
@@ -268,5 +302,18 @@ dt {
     grid-template-columns: repeat(3, 1fr);
     -ms-grid-columns: repeat(3, 1fr);
     column-gap: 2rem;
+  }
+
+  .header {
+    flex-direction: row;
+    background-color: #333;
+    color: #ddd;
+    padding: 1rem 0;
+    width: 100%;
+  }
+
+  .about-section p {
+    text-align: justify;
+    width: 50rem;
   }
 }
