--- a/src/style.css
+++ b/src/style.css
@@ -11,8 +11,8 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 2.2rem;
   line-height: 1.5;
   color: #333;
   background-color: #fff;
@@ -26,8 +26,9 @@ body {
 
 main {
   background-image: url("./assets/background_home.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  /* background-repeat: no-repeat; */
+  background-size: auto;
+  background-color: rgb(47, 47, 49);
 }
 
 main p {
@@ -96,27 +97,26 @@ dt {
 .header {
   display: flex;
   flex-direction: column;
-  background-color: #333;
+  background-color: rgb(7, 7, 7);
   color: #ddd;
   padding: 1rem 0;
   width: 100%;
 }
 
 .footer {
-  background-color: #333;
+  background-color: rgb(7, 7, 7);
   color: #ddd;
   padding: 1rem 0;
 }
 
 .nav {
-  /* width: 15%; */
   padding: 0;
 }
 
 .nav a {
   text-decoration: none;
   color: #ddd;
-  font-size: 16px;
+  font-size: 2rem;
   font-weight: bold;
   padding: 10px;
   display: block;
@@ -146,6 +146,8 @@ dt {
 h3,
 .summary p {
   color: #ddd;
+  font-weight: 100;
+  font-size: 2.5rem;
 }
 
 .card {
@@ -189,6 +191,10 @@ h3,
   font-weight: bold;
 }
 
+.link {
+  color: #ddd;
+}
+
 .close {
   position: absolute;
   right: 20px;
@@ -224,6 +230,7 @@ h3,
   grid-template-columns: repeat(1, 1fr);
   column-gap: 1rem;
   padding: 0;
+  margin: 0;
 }
 
 .div-container {
@@ -243,10 +250,11 @@ h3,
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 4rem;
 }
 
 .likes-container p {
-  font-size: 1rem;
+  font-size: 1.3rem;
   margin-top: 0;
 }
 
@@ -254,6 +262,7 @@ h3,
   width: 21rem;
   margin-top: 1rem;
   color: white;
+  column-gap: 1rem;
 }
 
 .like-icon:hover {
@@ -323,7 +332,6 @@ h3,
 
   .header {
     flex-direction: row;
-    background-color: #333;
     color: #ddd;
     padding: 1rem 0;
     width: 100%;
